--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) js/home/scripts.js -->
+        <!-- build:js({.tmp,app}) js/pages/page.home.js -->
         <script src="js/app/app.home.js"></script>
         <script src="js/controllers/controller.home.js"></script>
         <script src="js/directives/directives.js"></script>
