--- a/app/index.html
+++ b/app/index.html
@@ -94,8 +94,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) js/home/scripts.js -->
-        <script src="js/app/app.home.js"></script>
+    <!-- build:js({.tmp,app}) js/home/scripts.js -->
+    <script src="bower_components/bootstrap/js/button.js"></script>
+    <script src="js/app/app.home.js"></script>
         <script src="js/controllers/controller.home.js"></script>
         <script src="js/directives/directives.js"></script>
         <script src="js/filters/filters.js"></script>
