--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) css/main.css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- endbuild -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!--[if lt IE 9]>
