--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) js/pages/page.home.js -->
+        <script src="js/i18n/angular-locale_zh-cn.js"></script>
         <script src="js/app/app.home.js"></script>
         <script src="js/controllers/controller.home.js"></script>
         <script src="js/directives/directives.js"></script>
