--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css({.tmp,app}) css/main.css -->
+    <!-- build:css({.tmp,app}) css/index.css -->
     <link rel="stylesheet" href="css/index.css">
     <!-- endbuild -->
     <script src="bower_components/modernizr/modernizr.js"></script>
