Signed-off-by: Chanh Wang <v_wangqianhe1@xdf.cn>

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/respond/dest/respond.src.js"></script>
+    <script src="bower_components/bootstrap/js/tooltip.js"></script>
+    <script src="bower_components/bootstrap/js/popover.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) js/pages/page.home.js -->
