--- a/app/index.html
+++ b/app/index.html
@@ -48,17 +48,18 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/respond/dest/respond.src.js"></script>
-    <script src="bower_components/bootstrap/js/tooltip.js"></script>
-    <script src="bower_components/bootstrap/js/popover.js"></script>
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) js/pages/page.home.js -->
-        <script src="js/i18n/angular-locale_zh-cn.js"></script>
-        <script src="js/app/app.home.js"></script>
-        <script src="js/controllers/controller.home.js"></script>
-        <script src="js/directives/directives.js"></script>
-        <script src="js/filters/filters.js"></script>
-        <script src="js/services/services.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) js/pages/page.home.js -->
+    <script src="js/components/tooltip.js"></script>
+    <script src="js/components/popover.js"></script>
+    <script src="js/components/dropdown.js"></script>
+    <script src="js/i18n/angular-locale_zh-cn.js"></script>
+    <script src="js/app/app.home.js"></script>
+    <script src="js/controllers/controller.home.js"></script>
+    <script src="js/directives/directives.js"></script>
+    <script src="js/filters/filters.js"></script>
+    <script src="js/services/services.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
